<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Client</string>
    <string name="hello">Hello Android, DemoAppActivity!</string>
    <string name="settings">Settings</string>
    <string name="demo">Demo</string>
    <!-- 登录 -->
     <string name="login_prompt">登录中，请稍等...</string>
     <string name="loading_prompt">正在加载数据...</string>
     
    <!--网络模块  -->
    <string name="net_warn">网络不可用，请重试连接。</string>
    <!--ORM存储  -->
    <string name="save_success">储存成功</string>
    <string name="save_fail">储存失败</string>
    
    <!-- Actionbar 菜单  -->
    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_found">发现</string>
    <string name="tab_me">我</string>
    
    
    <!-- Labels -->
    <string name="label_activity_examples">Activity Examples</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    
     <string name="filter_edit_keyword">请输入关键字</string>
     <!-- 通讯录默认 缩写和名字 -->
     <string name="address_iterm_sort">A</string>
     <string name="address_iterm_sort_name">douruanliang</string>
     <!-- 用户信息 字段 -->
     <string name="user_action_set_pet_tag">设置备注和标签</string>
     <string name="user_action_address">地区</string>
     <string name="user_action_send">发消息</string>
     <string name="user_action_chat_video">视频聊天</string>
     <string name="user_action_more">更多</string>
     <!--聊天页面 -->
     <string name="chat_send_btn">发 送</string>
     <string name="chat_add_image">图片</string>
     <string name="chat_add_photo">拍照</string>
     <string name="chat_add_lbs">位置</string>
     <string name="button_pushtotalk">按住说话</string>
     <!-- 标签页面 -->
     <string name="tag_add_new">新建</string>
     <string name="tag_all">所有标签2</string>
 
</resources>
