<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:dourl="http://schemas.android.com/apk/res/org.androidpn.demoapp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
 <android.support.v4.view.ViewPager
	    android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
	</android.support.v4.view.ViewPager>
	
	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal" >
        <org.androidpn.demoapp.view.ChangeColorIconWithText
             android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            dourl:icon="@drawable/ic_menu_start_conversation"
            dourl:text="@string/app_name"
            dourl:text_size="12sp"
            dourl:color="#ff45c01a" />
        
        <org.androidpn.demoapp.view.ChangeColorIconWithText
             android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            dourl:icon="@drawable/ic_menu_friendslist"
           dourl:text="@string/tab_contact"
            dourl:text_size="12sp"
            dourl:color="#ff45c01a" />
        
        
        <!-- <org.androidpn.demoapp.view.ChangeColorIconWithText
             android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            dourl:icon="@drawable/ic_menu_emoticons"
           dourl:text="@string/tab_found"
            dourl:text_size="12sp"
            dourl:color="#ff45c01a" /> -->
        
        <org.androidpn.demoapp.view.ChangeColorIconWithText
             android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            dourl:icon="@drawable/ic_menu_allfriends"
           dourl:text="@string/tab_me"
            dourl:text_size="12sp"
            dourl:color="#ff45c01a" />
	</LinearLayout>
</LinearLayout>
